--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -167,7 +167,7 @@ a {
   }
   body, #root, #root > div {
     display: flex !important;
-    align-items: center !important;
+    align-items: flex-start !important;
     justify-content: center !important;
     min-height: 100vh;
     width: 100vw;
